<resources>
    <string name="app_name">CropGuardCameraApp</string>
    <string name="predict">Predict</string>
    <string name="exit">Exit</string>
    <string name="process">Process</string>
    <string name="camera">Camera</string>
    <string name="open_camera">Open Camera</string>
    <string name="uploaded_image">Uploaded Image</string>
    <string name="prediction">Prediction</string>
    <string name="pred_result">pred_result</string>
    <string name="select_image">Select Image</string>
    <string name="start">Start</string>
    <string name="potato_leaf">Potato Leaf</string>
    <string name="tea_leaf">Tea Leaf</string>
    <string name="paddy_leaf">Paddy Leaf</string>
    <string name="chatbot">ChatBot</string>
    <string name="take_picture">Take Picture</string>
    <string name="launch_gallery">Launch Gallery</string>
    <string name="classified_as">Classified as:</string>
    <string name="send">Send</string>
    <string name="type_your_message">Type your message…</string>
</resources>